@@ -2346,7 +2346,7 @@
          </div>
          <div class="para _2">
           <p>
-           The new position within the stream will be <code class="fsharp"><span class="ci">max</span><span class="cp">(</span><a
+           The new position within the stream will be <code class="fsharp"><span class="ci">min</span><span class="cp">(</span><a
            href="#CharStream.members.Index"><span class="ci">Index</span></a> <span class="co">+</span> <span class="ci">utf16Offset</span><span
            class="cp">,</span> <a href="#CharStream.members.IndexOfLastCharPlus1"><span class="ci">IndexOfLastCharPlus1</span></a><span
            class="cp">)</span></code>. This means you can’t move past the end of the stream, because any position beyond the last char in the stream
